--- a/README
+++ b/README
@@ -1,12 +1,12 @@
-This is an implementation of BH coding task
+# This is an implementation of BH coding task
 
-The solution consists of three services:
+## The solution consists of three services:
 - Accounts - responsible for storing Accounts
 - Transactions - responsible for storing Transactions
 - DataViewer - responsible for retrieving aggregated custiomer info
 (accounts, transactions, balance) and displaying it via web UI.
 
-Implementation limitations
+## Implementation limitations
 Due to time limitations the provided implementation is not "ideal", there is a room
 for improvements. The main attention was paid for general architecture and basic scenarios.
 In particular the following still can be improved:
@@ -19,27 +19,27 @@ client as they are
 service are supposed to be up and running (Accounts service depends on Transactions service)
 - all data is stored in very simple memory storage (Singleton class)
 
-Accounts
+## Accounts
 This service is responsible for storing Accounts and retrieving them.
-- Run instructions:
+### Run instructions:
 In command line execute:
 -- java -jar accounts-0.0.1-SNAPSHOT.jar
-The following REST endpoints are exposed:
+### The following REST endpoints are exposed:
 - Create account:
 -- POST /accounts?customerId=<CUSTOMER_ID>&name=<CUSTOMER_NAME>&initialCredit=<INITIAL_CREDIT>
 -- Returns ID of created account
 - Get account by customer ID:
 -- GET /accounts?customerId=<CUSTOMER_ID>
-Configuration:
+### Configuration:
 server.port - port number which this service is listening to. Default - 8082
 create.transaction.service.url - URL of Transactions service for creating account transaction
 
-Transactions
+## Transactions
 This service is responsible for storing Transactions and retrieving them.
-Run instructions:
+### Run instructions:
 - In command line execute:
 -- java -jar transactions-0.0.1-SNAPSHOT.jar
-The following REST endpoints are exposed:
+### The following REST endpoints are exposed:
 - Create new transaction for account:
 -- POST /transactions?accountId=<ACCOUNT_ID>&amount=<AMOUNT>
 -- return new transation ID
@@ -47,16 +47,16 @@ The following REST endpoints are exposed:
 If TRANSACTIONS_LIMIT <= 0 - all transactions for account will be returned
 -- GET /transactions/<ACCOUNT_ID>/<TRANSACTIONS_LIMIT>
 -- Returns list of transactions for given account
-Configuration:
+### Configuration:
 server.port - port number which this service is listening to. Default - 8083
 
-DataViewer
+## DataViewer
 This service is responsible for retrieving aggregated data for customer - its accounts,
 transactions and balances
-Run instructions:
+### Run instructions:
 - In command line execute:
 -- java -jar DataViewer-0.0.1-SNAPSHOT.jar
-The following REST endpoint is exposed:
+### The following REST endpoint is exposed:
 - Get customer data:
 -- /data/<CUSTOMER_ID>
 -- Returns the data structure containing:
@@ -64,7 +64,7 @@ The following REST endpoint is exposed:
 --- List of accounts for customer
 --- For each account - its balance
 --- For each account - list of last transactions
-Configuration:
+### Configuration:
 server.port - port number which this service is listening to. Default - 8083
 transactions.limit - maximum amount of transactions which will be retrieved for each
 customer's account.
